<resources>
    <string name="app_name">Easy Vegie</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="Login">Log in</string>
    <string name="recover_acc">How do want to recover your account ?</string>
    <string name="proceed">Proceed</string>
    <string name="verifyMobNo">Through phone number</string>
    <string name="verifyEmail">Through Email id</string>
    <string name="verify_account">Verify your account</string>
    <string name="otp_sent_text">OTP has been sent to your registered number.</string>
    <string name="resendotp">Resend OTP?</string>
    <string name="choose_lang">Choose Language</string>
    <string name="select_lang">Please select your language.</string>
    <string name="error">Error</string>
    <string name="check_network_connection">Please check your internet connection!</string>
    <string name="email_err">Please enter email or phone number</string>
    <string name="phone_no">Please enter phone number</string>
    <string name="pass_error">Please enter password</string>
    <string name="name_error">Please enter name</string>
    <string name="pass_miss">password miss match</string>


    <string name="email_err_forgot_pass">Please enter email</string>

    <string name="otpTextEmail">OTP has been sent to your email id.</string>
    <string name="otpTextPhone">OTP has been sent to your register phone number.</string>
    <string name="new_password">Must be new password</string>
    <string name="old_pass">Must be old password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopByCategory">Shop by Category</string>
    <string name="shopByQuotation">Shop by Quotation</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="yourLocation">Your Location</string>
    <string name="select_brand">Select Brand</string>
    <string name="proceedToCheckOut">Proceed To Checkout</string>
    <string name="product">Product</string>
    <string name="uom">Uom</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="totalPrice">Total Price</string>
    <string name="addToCart">Add To Cart</string>
    <string name="serialNo">Si No</string>
    <string name="delete">Delete</string>
    <string name="addMore">Add More</string>
    <string name="share">Share</string>
    <string name="saveAsQuotation">Save as Quotation</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="search_product">Search Product</string>
    <string name="search_hint">Search Product</string>
    <string name="offers">Offers</string>
    <string name="refund">Refund</string>
    <string name="orderId">Order ID</string>
    <string name="orderedProduct">Ordered Product</string>
    <string name="expectedDeliveryDate">Expected Delivery Date</string>
    <string name="total">Total</string>
    <string name="deliveryCharges">Delivery Charges</string>
    <string name="paidAmount">Paid Amount</string>
    <string name="paymentmode">Payment Mode</string>
    <string name="remainingAmount">Remaining Amount</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="credit_card_debit_card">Credit Card / Debit Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="upi_payment">UPI Payment</string>
    <string name="subTotal">Sub Total </string>
    <string name="taxesIfAny">Taxes if any</string>
    <string name="apply">Apply</string>
    <string name="coupon_info">Coupon OR/and use Referral Code for discount and more.</string>
    <string name="checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="changeLanguage">Change Language</string>
    <string name="selectLanguage">Select Language</string>
    <string name="skip">Skip</string>
    <string name="addNewAddress">Add New Address</string>
    <string name="address_house_hint">Address (House no, Building, Street, Area)</string>
    <string name="locality_town">Locality / Town</string>
    <string name="pincode">Pincode</string>
    <string name="city_district">City / District</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="changeAddress">Change Address</string>
    <string name="orderNo">Order No.</string>
    <string name="orderDate">Order Date</string>
    <string name="savedQuotations">Saved Quotations</string>
    <string name="quotationNo">Quotation No</string>
    <string name="savedDate">Saved Date</string>
    <string name="payNow">Pay Now</string>
    <string name="yourMessage">Your Message</string>
    <string name="no_supply_in_this_pincode">There is no supply at your location.</string>
    <string name="previous_total_amount">Previous Total Amount</string>
    <string name="updated_price_total">Updated price total</string>
    <string name="orderAmount">Order Amount</string>
    <string name="orderStatus">Order Status</string>

<!--    <string name="razor_pay_api_key">rzp_test_d5XuHL2O7ABANw</string>-->
    <string name="razor_pay_api_key">rzp_live_AFzYeow7DiAood</string>
    <string name="razor_pay_secret_key">EbdhQfLulOvFO9rWkruburFn</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <string name="customer_support_email_id">freshtofunction@gmail.com</string>
    <string name="customer_support_whatsapp_number">918296851103</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_successful_message">Your Payment has been made successfully.</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="select_delivery_date_and_time">Select Delivery Date and Time</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="info_dialog_title"></string>
    <string name="order_limit_reached">Can\'t received more orders for the selected date, please try with another date.</string>
    <string name="choose_address">Choose Address</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash">Cash On Delivery </string>
    <string name="returnOrder">Return</string>
    <string name="your_order_is_placed_successfully">Your order is placed successfully.</string>

    <string name="google_map_key">AIzaSyCnT_a_MtrvXBo5OzHQvIg5ZiEANZ0EycM</string>

    <string name="map_my_india_rest_api_key">fcgjgl8igdjw83dvqf1bi8ccuz3ox3gc</string>
    <string name="map_my_india_sdk_key">qv8ihf194vhnatjz8va23lp9xswu7djx</string>
    <string name="something_went_wrong">Oops! Something went wrong, Please try again.</string>
    <string name="timeout_occur">Timeout</string>
    <string name="application_not_found">Application not found</string>
    <string name="can_not_select_past_time">Can\'t select past time</string>
    <string name="delete_save">Delete \n Save</string>
    <string name="minimum_quantity_is_required">Minumum quantity of item in cart is required</string>
    <string name="minimum_order_amount">Minimum Order Amount</string>
    <string name="minimum_order_amount_limit_is">Minimum order amount is Rs.</string>
    <string name="oops">Oops!</string>
    <string name="login_as_guest">Login as Guest</string>

    <string-array name="mapbox_default_public_key">
        pk.eyJ1IjoiYXBwdGVhbWZvdXIiLCJhIjoiY2tucHh5ZDIwMDFuZTJ1bzM3bW1jcTg2OSJ9.k7doaHzcUAZLeUZjU2Rjxw
    </string-array>

</resources>