<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey_back_ground"
        tools:context=".activities.MyCartActivity">

        <include
            layout="@layout/custom_actionbar_layout"/>

        <LinearLayout
            android:id="@+id/ll_CartParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subTotal"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

                <TextView
                    android:id="@+id/tv_SubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryCharges"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

                <TextView
                    android:id="@+id/tv_DeliveryCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxesIfAny"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

                <TextView
                    android:id="@+id/tv_Taxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tv_Apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:textColor="@color/applyTextColorCode"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

                <TextView
                    android:id="@+id/tv_CouponDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_info"
                    android:layout_toRightOf="@+id/tv_Apply"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:fontFamily="@font/avenirnextltpro_bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/_8sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

                <TextView
                    android:id="@+id/tv_TotalMyCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/avenirnextltpro_bold"/>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/_8sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ItemInCart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_8sdp"/>

            <Button
                android:id="@+id/button_Checkout"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_solid_rounded"
                android:gravity="center"
                android:text="@string/checkout"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

</layout>
