<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginRight="@dimen/_1sdp"
        android:background="@color/white"
        android:gravity="center"
        android:weightSum="6.5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:text="@string/serialNo"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tvAvailableQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="Stock"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/product"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <!--<View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/uom"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/avenirnextltpro_regular"
            />-->

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/totalPrice"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>