<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_8sdp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_20sdp"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addNewAddress"
                        android:fontFamily="@font/avenirnextltpro_bold"
                        android:gravity="center"
                        android:textAllCaps="true"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:padding="@dimen/_12sdp"
                        android:background="@drawable/edittext_outline_white_background">

                        <EditText
                            android:id="@+id/et_Address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/avenirnextltpro_regular"
                            android:hint="@string/address_house_hint"/>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:padding="@dimen/_12sdp"
                        android:background="@drawable/edittext_outline_white_background">

                        <EditText
                            android:id="@+id/et_LocalityTown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/locality_town"
                            android:fontFamily="@font/avenirnextltpro_regular"
                            android:textSize="@dimen/_12sdp"/>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:padding="@dimen/_12sdp"
                        android:background="@drawable/edittext_outline_white_background">

                        <EditText
                            android:id="@+id/et_Pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/pincode"
                            android:fontFamily="@font/avenirnextltpro_regular"
                            android:textSize="@dimen/_12sdp"/>

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:padding="@dimen/_12sdp"
                        android:background="@drawable/edittext_outline_white_background">

                        <EditText
                            android:id="@+id/et_CityDistrict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/city_district"
                            android:fontFamily="@font/avenirnextltpro_regular"
                            android:textSize="@dimen/_12sdp" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:padding="@dimen/_12sdp"
                        android:background="@drawable/edittext_outline_white_background">

                        <EditText
                            android:id="@+id/et_State"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/state"
                            android:fontFamily="@font/avenirnextltpro_regular"
                            android:textSize="@dimen/_12sdp"/>

                    </FrameLayout>

                    <Button
                        android:id="@+id/button_Save"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:background="@drawable/btn_solid_rounded"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/avenirnextltpro_regular"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</layout>
